@@ -8,6 +8,7 @@ import drinkshop.service.validator.ValidationException;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class StocService {
 
@@ -63,7 +64,7 @@ public class StocService {
 
             List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                     .filter(s -> s.getIngredient().equalsIgnoreCase(ingredient))
-                    .toList();
+                    .collect(Collectors.toList());
 
             double ramas = necesar;
 
